# mcp-log-triage-server

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/development/: architecture.md  contributing.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: ai-review.md  prompts.md  resources.md  tools.md
docs/reference/: cli.md  configuration.md  log-formats.md
src/mcp_log_triage/: __init__.py
src/mcp_log_triage_server/: __init__.py  __main__.py  ai_review.py  cli.py  formats.py  log_service.py  mcp_server.py  models.py  scanning.py  server.py  time_window.py
src/mcp_log_triage_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_log_triage_server/core/: ai_review.py  formats.py  log_service.py  models.py  scanning.py  time_window.py
src/mcp_log_triage_server/core/ai_review/: __init__.py  models.py  prompt.py  redaction.py  service.py
src/mcp_log_triage_server/core/formats/: __init__.py  access.py  base.py  bracket.py  cef.py  composite.py  jsonl.py  kv.py  logfmt.py  loose.py  ltsv.py  (+1 more)
src/mcp_log_triage_server/prompts/: registry.py
src/mcp_log_triage_server/resources/: registry.py
src/mcp_log_triage_server/server/: log_server.py  mcp_stdio.py
src/mcp_log_triage_server/tools/: triage.py
tests/: conftest.py
tests/core/: test_ai_review.py  test_formats.py  test_log_service.py  test_scanning.py  test_time_window.py
tests/tools/: test_triage.py
