[project]
name = "mcp-log-triage-server"
version = "0.1.0"
description = "MCP server for triaging local log files."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Your Name" }]
dependencies = [
  "mcp>=0.1.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
ai = [
  "google-genai>=0.3.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
log-triage-mcp = "mcp_log_triage_server.server.log_server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

